objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Individual_Condition_3__c</fullName>
        <label>Individual Condition 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIDS or HIV Positive</fullName>
                </value>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Back Disorder</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Heart Disease</fullName>
                </value>
                <value>
                    <fullName>Kidney Disorder</fullName>
                </value>
                <value>
                    <fullName>Liver Disease</fullName>
                </value>
                <value>
                    <fullName>Mental Illness</fullName>
                </value>
                <value>
                    <fullName>Muscular Disorder</fullName>
                </value>
                <value>
                    <fullName>Nervous System Disorder</fullName>
                </value>
                <value>
                    <fullName>Respiratory Disease</fullName>
                </value>
                <value>
                    <fullName>Stroke</fullName>
                </value>
                <value>
                    <fullName>Substance Dependency</fullName>
                </value>
                <value>
                    <fullName>Transplants</fullName>
                </value>
                <value>
                    <fullName>Tumor</fullName>
                </value>
                <value>
                    <fullName>Other Serious Condition(s)</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_DOB_1__c</fullName>
        <label>Individual DOB 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_DOB_2__c</fullName>
        <label>Individual DOB 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_DOB_3__c</fullName>
        <label>Individual DOB 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Date_of_Onset_1__c</fullName>
        <label>Individual Date of Onset 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Date_of_Onset_2__c</fullName>
        <label>Individual Date of Onset 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Date_of_Onset_3__c</fullName>
        <label>Individual Date of Onset 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Degree_of_Recovery_1__c</fullName>
        <label>Individual Degree of Recovery 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Pending Treatment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Degree_of_Recovery_2__c</fullName>
        <label>Individual Degree of Recovery 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Pending Treatment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Degree_of_Recovery_3__c</fullName>
        <label>Individual Degree of Recovery 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Pending Treatment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Gender_1__c</fullName>
        <label>Individual Gender 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Gender_2__c</fullName>
        <label>Individual Gender 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Gender_3__c</fullName>
        <label>Individual Gender 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Last_Date_Treated_1__c</fullName>
        <label>Individual Last Date Treated 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Last_Date_Treated_2__c</fullName>
        <label>Individual Last Date Treated 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Last_Date_Treated_3__c</fullName>
        <label>Individual Last Date Treated 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Name_1__c</fullName>
        <label>Individual Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Name_2__c</fullName>
        <label>Individual Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Name_3__c</fullName>
        <label>Individual Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Treatment_1__c</fullName>
        <label>Individual Treatment 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Treatment_2__c</fullName>
        <label>Individual Treatment 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Treatment_3__c</fullName>
        <label>Individual Treatment 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Medical_Condition__c</fullName>
        <label>Known Medical Condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIDS or HIV Positive</fullName>
                </value>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Back Disorder</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Heart Disease</fullName>
                </value>
                <value>
                    <fullName>Kidney Disorder</fullName>
                </value>
                <value>
                    <fullName>Liver Disease</fullName>
                </value>
                <value>
                    <fullName>Mental Illness</fullName>
                </value>
                <value>
                    <fullName>Muscular Disorder</fullName>
                </value>
                <value>
                    <fullName>Nervous System Disorder</fullName>
                </value>
                <value>
                    <fullName>Respiratory Disease</fullName>
                </value>
                <value>
                    <fullName>Stroke</fullName>
                </value>
                <value>
                    <fullName>Substance Dependency</fullName>
                </value>
                <value>
                    <fullName>Transplants</fullName>
                </value>
                <value>
                    <fullName>Tumor</fullName>
                </value>
                <value>
                    <fullName>Other Serious Condition(s)</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_Medical_Current__c</fullName>
        <label>Known Medical Current</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - 1 or more employees is currently hospitalized</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 or more employees is currently confined at home</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 or more employees is currently incapacitated</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 or more employees is currently confined in a treatment facility</fullName>
                </value>
                <value>
                    <fullName>Yes - currently incapable of self-support due to mental or physical disability</fullName>
                </value>
                <value>
                    <fullName>No - none of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_Medical_Future__c</fullName>
        <label>Known Medical Future</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - 1 or more employees has been advised that medical treatment is necessary</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 or more employees has been advised that diagnostic testing is necessary</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 or more employees has been advised that surgery is necessary</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 or more employees has been advised that hospitalization is necessary</fullName>
                </value>
                <value>
                    <fullName>No - none of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_Medical_Past_Five_Years__c</fullName>
        <label>Known Medical Past Five Years</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - 1 or more employees has been treated for a serious illness</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 or more employees has been hospitalized</fullName>
                </value>
                <value>
                    <fullName>Yes -1 or more employees has had surgery</fullName>
                </value>
                <value>
                    <fullName>No - none of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Business_Name__c</fullName>
        <label>Legal Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>Contractors License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Run__c</fullName>
        <label>Loss Run</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NCCI_Attachment__c</fullName>
        <label>NCCI Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NCCI_Status__c</fullName>
        <label>NCCI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I do not have an NCCI Experience Modification Worksheet; please request it for me</fullName>
                </value>
                <value>
                    <fullName>I do not have an NCCI Experience Modification Worksheet; I will obtain one and send to ProService later</fullName>
                </value>
                <value>
                    <fullName>My NCCI Experience Modification Worksheet is attached below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_HI_Employee_Count__c</fullName>
        <label>Non-HI Employee Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_HI_Work_Days__c</fullName>
        <label>Non-HI Work Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Dental_Provider__c</fullName>
        <label>Other Dental Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Known_Medical_Condition__c</fullName>
        <label>Other Known Medical Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Primary_Provider_Plan__c</fullName>
        <label>Other Primary Provider Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Secondary_Provider_Plan__c</fullName>
        <label>Other Secondary Provider Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Water_Detail_Percent__c</fullName>
        <label>Over Water Detail Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Over_Water_Detail__c</fullName>
        <label>Over Water Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over_Water__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Accident_Description_1__c</fullName>
        <label>Past Claim Accident Description 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Accident_Description_2__c</fullName>
        <label>Past Claim Accident Description 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Accident_Description_3__c</fullName>
        <label>Past Claim Accident Description 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Additional_Detail__c</fullName>
        <label>Past Claim Additional Detail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Date_of_Accident_1__c</fullName>
        <label>Past Claim Date of Accident 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Date_of_Accident_2__c</fullName>
        <label>Past Claim Date of Accident 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Date_of_Accident_3__c</fullName>
        <label>Past Claim Date of Accident 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Days_Off_Work_1__c</fullName>
        <label>Past Claim Days Off Work 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Days_Off_Work_2__c</fullName>
        <label>Past Claim Days Off Work 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Days_Off_Work_3__c</fullName>
        <label>Past Claim Days Off Work 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Incurred_Cost_1__c</fullName>
        <label>Past Claim Incurred Cost 1</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Incurred_Cost_2__c</fullName>
        <label>Past Claim Incurred Cost 2</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Claim_Incurred_Cost_3__c</fullName>
        <label>Past Claim Incurred Cost 3</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Claims_Prevention__c</fullName>
        <label>Past Claims Prevention</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_HC_Invoice__c</fullName>
        <label>Past HC Invoice</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Past_Litigation_Detail__c</fullName>
        <label>Past Litigation Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Litigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Litigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Additional_Participants__c</fullName>
        <label>Pregnancy Additional Participants</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Due_Date_1__c</fullName>
        <label>Pregnancy Due Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Due_Date_2__c</fullName>
        <label>Pregnancy Due Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Due_Date_3__c</fullName>
        <label>Pregnancy Due Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Type_1__c</fullName>
        <label>Pregnancy Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
                <value>
                    <fullName>Pre-Term Labor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregnancy_Type_2__c</fullName>
        <label>Pregnancy Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
                <value>
                    <fullName>Pre-Term Labor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregnancy_Type_3__c</fullName>
        <label>Pregnancy Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
                <value>
                    <fullName>Pre-Term Labor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregnancy_YesNo__c</fullName>
        <label>Pregnancy (Yes/No)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregnancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pregnancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pregnant_Individual_Name_1__c</fullName>
        <label>Pregnant Individual Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregnant_Individual_Name_2__c</fullName>
        <label>Pregnant Individual Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregnant_Individual_Name_3__c</fullName>
        <label>Pregnant Individual Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_FN__c</fullName>
        <label>Primary Contact First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_LN__c</fullName>
        <label>Primary Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contribution_Employee_Only__c</fullName>
        <label>Primary Contribution Employee Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contribution_Employee_and_Childr__c</fullName>
        <label>Primary Contribution Employee and Childr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contribution_Employee_and_Family__c</fullName>
        <label>Primary Contribution Employee and Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contribution_Employee_and_Spouse__c</fullName>
        <label>Primary Contribution Employee and Spouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Plan_Coverage_Type__c</fullName>
        <label>Primary Plan Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Only</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription / Vision</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription / Vision / Dental</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Plan_Renewal_Date__c</fullName>
        <label>Primary Plan Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Provider_Plan__c</fullName>
        <label>Primary Provider Plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMAA - Option 1</fullName>
                </value>
                <value>
                    <fullName>HMAA - Option 2</fullName>
                </value>
                <value>
                    <fullName>HMAA - Comp Basic</fullName>
                </value>
                <value>
                    <fullName>HMAA - Comp Plus</fullName>
                </value>
                <value>
                    <fullName>HMSA - Comp Med</fullName>
                </value>
                <value>
                    <fullName>HMSA - PPP</fullName>
                </value>
                <value>
                    <fullName>HMSA - HPH</fullName>
                </value>
                <value>
                    <fullName>Kaiser - HMO</fullName>
                </value>
                <value>
                    <fullName>Kaiser - Added Choice</fullName>
                </value>
                <value>
                    <fullName>Kaiser - Other</fullName>
                </value>
                <value>
                    <fullName>UHA - 3000</fullName>
                </value>
                <value>
                    <fullName>UHA - 600</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protective_Equipment_Requirement_Detail__c</fullName>
        <label>Protective Equipment Requirement Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protective_Equipment_Requirement_Percent__c</fullName>
        <label>Protective Equipment Requirement Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Protective_Equipment_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protective Equipment Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarterly_Wage_Report__c</fullName>
        <label>Quarterly Wage Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Retirement_Cost__c</fullName>
        <label>Retirement Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_Plan__c</fullName>
        <label>Retirement Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I have a retirement plan</fullName>
                </value>
                <value>
                    <fullName>No, I do not have a retirement plan - please include in my proposal</fullName>
                </value>
                <value>
                    <fullName>No, I do not have a retirement plan - do not include in my proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_to_Work_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return to Work Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner/Executive</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Sales/Marketing</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SUTA_Rate__c</fullName>
        <label>SUTA Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Contribution_Employee_Only__c</fullName>
        <label>Secondary Contribution Employee Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contribution_Employee_and_Chil__c</fullName>
        <label>Secondary Contribution Employee and Chil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contribution_Employee_and_Fami__c</fullName>
        <label>Secondary Contribution Employee and Fami</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contribution_Employee_and_Spou__c</fullName>
        <label>Secondary Contribution Employee and Spou</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Plan_Coverage_Type__c</fullName>
        <label>Secondary Plan Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Only</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription / Vision</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription / Vision / Dental</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Plan_Renewal_Date__c</fullName>
        <label>Secondary Plan Renewal Date</label>
        <type>Date</type>
    </fields>
</CustomObject>